--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions"
-                abiFilters "armeabi","arm64-v8a","armeabi-v7a","x86"
+               /* abiFilters "armeabi","arm64-v8a","armeabi-v7a","x86"*/
             }
         }
     }
